fix the weird spacing issue on the root page

--- a/app/assets/stylesheets/root.css
+++ b/app/assets/stylesheets/root.css
@@ -1,6 +1,23 @@
 .nav-item {
-  padding: 5px;
+  padding: 10px;
+  width: auto;
+  height: auto;
 }
+
 .logo {
   color: white;
+}
+
+.alert{
+  margin-left: auto;
+  margin-right: auto;
+  width: auto;
+  height: auto;
+  text-align: center;
+}
+
+.center-block {
+        display: block;
+        margin-right: auto;
+        margin-left: auto;
 }
